--- a/education-tutorials.html
+++ b/education-tutorials.html
@@ -1,1 +1,269 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Education & Tutorials – GpopzRaw</title>
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    /* Theme Styles */
+    body.lighttheme {
+      background-color: #e0f7ff;
+      color: #000;
+    }
 
+    body.darktheme {
+      background-color: #0d0d0d;
+      color: #f0f0f0;
+    }
+
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+
+    .logo {
+      height: 40px;
+    }
+
+    .navlinks a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: inherit;
+      font-weight: bold;
+    }
+
+    .themetoggle {
+      background: none;
+      border: none;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
+
+    .herocontent {
+      text-align: center;
+      padding: 60px 20px;
+    }
+
+    .servicepage h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #007acc;
+    }
+
+    .servicepage p {
+      line-height: 1.6;
+      font-size: 1.1rem;
+      max-width: 800px;
+      margin: 0 auto 30px;
+    }
+
+    .featureslist {
+      max-width: 800px;
+      margin: 0 auto 40px;
+    }
+
+    .featureitem {
+      margin-bottom: 20px;
+    }
+
+    .featureitem h4 {
+      color: #007acc;
+    }
+
+    .chatbotbutton {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #007acc;
+      color: white;
+      border: none;
+      padding: 15px 20px;
+      border-radius: 50px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      z-index: 1000;
+      transition: background 0.3s ease;
+    }
+
+    .chatbotbutton:hover {
+      background-color: #005fa3;
+    }
+
+    .sitefooter {
+      text-align: center;
+      padding: 30px 20px;
+      font-size: 0.9rem;
+      background-color: #1a1a1a;
+      color: #ccc;
+    }
+
+    .sociallinks a {
+      color: #007acc;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+  </style>
+</head>
+<body class="lighttheme">
+
+  <!-- Navigation -->
+  <header class="navbar">
+    <img src="images/logo.png" alt="GpopzRaw Logo" class="logo" />
+    <nav>
+      <ul class="navlinks">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <button onclick="toggleTheme()" class="themetoggle">🌙</button>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="herocontent">
+    <h1>Educational Platform & Tutorials</h1>
+    <p>I create engaging, beginner-friendly tutorials, coding guides, and digital learning experiences that help people learn tech skills in an intuitive and practical way.</p>
+  </section>
+
+  <!-- Service Page Content -->
+  <section class="servicepage">
+    <div class="container">
+      <h2>What I Offer</h2>
+      <p>
+        Whether you're just starting out or looking to deepen your technical knowledge, I provide high-quality educational resources designed to be clear, hands-on, and impactful.
+      </p>
+
+      <div class="featureslist">
+        <div class="featureitem">
+          <h4>🎓 Full-Length Courses</h4>
+          <p>Structured, step-by-step video courses covering web development, AI, automation, cybersecurity, and more — perfect for self-paced learning.</p>
+        </div>
+
+        <div class="featureitem">
+          <h4>🎥 Video Tutorials</h4>
+          <p>Short, focused video lessons that break down complex topics into easy-to-understand segments, great for visual learners.</p>
+        </div>
+
+        <div class="featureitem">
+          <h4>📝 Written Guides & Articles</h4>
+          <p>In-depth articles, code walkthroughs, and how-tos that explain concepts clearly with real-world examples and use cases.</p>
+        </div>
+
+        <div class="featureitem">
+          <h4>💻 Interactive Code Labs</h4>
+          <p>Hands-on exercises where you can write and test code directly in your browser — no setup required.</p>
+        </div>
+
+        <div class="featureitem">
+          <h4>🧠 Learning Roadmaps</h4>
+          <p>Customized paths to help you progress from beginner to advanced developer, tailored to your goals and current skill level.</p>
+        </div>
+      </div>
+
+      <h2>Why Choose Me?</h2>
+      <p>
+        I combine deep technical expertise with teaching experience to create content that truly helps people learn. My materials are designed to be accessible, practical, and built around real-world applications — not just theory.
+        You’ll get clear explanations, downloadable resources, and support along the way.
+      </p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="sitefooter">
+    <p>GpopzRaw © 2025. All rights reserved.</p>
+    <p>📍 Location: No.8 Karewa Maskare, Karewa Ward, Yola-Jimeta, Adamawa State</p>
+    <p>📞 Phone: 07088886028 | WhatsApp: +234708886028 | Email: haroon@bluesapphire.com.ng</p>
+    <div class="sociallinks">
+      <a href="https://github.com/gpopzraw9/">GitHub</a>  |
+      <a href="#">LinkedIn</a> |
+      <a href="#">YouTube</a> |
+      <a href="#">Twitter/X</a>
+    </div>
+    <button onclick="toggleTheme()" class="themetogglefooter">☀️</button>
+  </footer>
+
+  <!-- AI Chatbot Button -->
+  <div class="chatbotbutton" onclick="openChatbot()">
+    💬 Chat with AI
+  </div>
+
+  <!-- Chatbot Modal -->
+  <div id="chatbotModal" class="chatbotmodal">
+    <div class="chatbotheader">
+      <span>🤖 GpopzBot</span>
+      <button onclick="closeChatbot()">✕</button>
+    </div>
+    <div class="chatbotbody">
+      <p>Hello! I'm your GpopzBot assistant. Ask me anything about Haroon, his services, or technology!</p>
+      <input type="text" placeholder="Type your question..." onkeypress="handleKeyPress(event)" />
+      <button onclick="sendMessage()">Send</button>
+    </div>
+  </div>
+
+  <!-- Script -->
+  <script>
+    // Load theme from localStorage
+    document.addEventListener("DOMContentLoaded", function () {
+      const savedTheme = localStorage.getItem("theme");
+      if (savedTheme === "dark") {
+        document.body.classList.remove("lighttheme");
+        document.body.classList.add("darktheme");
+        document.querySelector(".themetoggle").textContent = "☀️";
+        document.querySelector(".themetogglefooter").textContent = "☀️";
+      } else {
+        document.body.classList.remove("darktheme");
+        document.body.classList.add("lighttheme");
+        document.querySelector(".themetoggle").textContent = "🌙";
+        document.querySelector(".themetogglefooter").textContent = "🌙";
+      }
+    });
+
+    // Toggle theme and save preference
+    function toggleTheme() {
+      const body = document.body;
+      const isDark = body.classList.contains("darktheme");
+
+      if (isDark) {
+        body.classList.remove("darktheme");
+        body.classList.add("lighttheme");
+        document.querySelector(".themetoggle").textContent = "🌙";
+        document.querySelector(".themetogglefooter").textContent = "🌙";
+        localStorage.setItem("theme", "light");
+      } else {
+        body.classList.remove("lighttheme");
+        body.classList.add("darktheme");
+        document.querySelector(".themetoggle").textContent = "☀️";
+        document.querySelector(".themetogglefooter").textContent = "☀️";
+        localStorage.setItem("theme", "dark");
+      }
+    }
+
+    // Chatbot functions
+    function openChatbot() {
+      document.getElementById("chatbotModal").style.display = "block";
+    }
+
+    function closeChatbot() {
+      document.getElementById("chatbotModal").style.display = "none";
+    }
+
+    function handleKeyPress(event) {
+      if (event.key === "Enter") {
+        sendMessage();
+      }
+    }
+
+    function sendMessage() {
+      const input = document.querySelector(".chatbotbody input");
+      alert("You asked: " + input.value);
+      input.value = "";
+    }
+  </script>
+</body>
+</html>
