--- a/index.html
+++ b/index.html
@@ -278,5 +278,17 @@
       input.value = "";
     }
   </script>
+  <footer class="sitefooter">
+  <p>GpopzRaw © 2025. All rights reserved.</p>
+  <p>📍 Location: No.8 Karewa Maskare, Yola-Jimeta, Adamawa State</p>
+  <p>📞 Phone: 07088886028 | WhatsApp: +2347088886028 | Email: haroon@bluesapphire.com.ng</p>
+  <div class="sociallinks">
+    <a href="https://github.com/gpopzraw9/">GitHub</a>  |
+    <a href="#">LinkedIn</a> |
+    <a href="#">YouTube</a> |
+    <a href="#">Twitter/X</a>
+  </div>
+  <button onclick="toggleTheme()" class="themetogglefooter">☀️</button>
+</footer>
 </body>
 </html>
