--- a/services.html
+++ b/services.html
@@ -113,7 +113,16 @@
   <ul class="navlinks">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="services.html">Services</a></li>
+    <li class="dropdown">
+  <span>Services ▾</span>
+  <ul class="dropdown-content">
+    <li><a href="webdevelopment.html">💻 Web Development</a></li>
+    <li><a href="aiautomation.html">🤖 AI & Automation</a></li>
+    <li><a href="educationtutorials.html">🎓 Education & Tutorials</a></li>
+    <li><a href="cybersecurity.html">🔐 Cybersecurity</a></li>
+    <li><a href="podcastingmedia.html">🎙️ Podcasting & Media</a></li>
+  </ul>
+</li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="contact.html">Contact</a></li>
