--- a/podcasting-media.html
+++ b/podcasting-media.html
@@ -128,6 +128,7 @@
   </ul>
 </li>
         <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
