--- a/portfolio.html
+++ b/portfolio.html
@@ -132,6 +132,7 @@
 </li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
