--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <!-- Navigation -->
   <header class="navbar">
-    <img src="images/logo.png" alt="GpopzRaw Logo" class="logo" />
+    <img src="/images/logo.png" alt="GpopzRaw Logo" class="logo" />
     <nav>
   <ul class="navlinks">
     <li><a href="index.html">Home</a></li>
