--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="herocontent">
-      <img src="/images/haroon-portrait.jpg" alt="Haroon Ahmad Amin" class="profilepic" />
+      <img src="images/haroon-portrait.jpg" alt="Haroon Ahmad Amin" class="profilepic" />
       <h1>Welcome to GpopzRaw</h1>
       <p>I'm Haroon Ahmad Amin — a creator, innovator, and builder of digital dreams.</p>
     </div>
